manifests/adservice.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopping-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice-dp
  namespace: shopping-app
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubernetes.io/change-cause: "Beta version 0.0.2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adservice
  template:
    metadata:
      labels:
        app: adservice
    spec:
      containers:
      - name: adservice
        image: longtruong2106/adservice:beta-0.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 9555
        livenessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:9555"]
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:9555"]
---
apiVersion: v1
kind: Service
metadata:
  name: adservice-svc
  namespace: shopping-app
spec:
  selector:
    app: adservice
  ports:
  - port: 9555
    targetPort: 9555
