manifests/cartservice.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopping-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice-dp
  namespace: shopping-app
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubernetes.io/change-cause: "Beta version 0.0.2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cartservice
  template:
    metadata:
      labels:
        app: cartservice
    spec:
      containers:
      - name: cartservice
        image: longtruong2106/cartservice:beta-0.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 7070
        livenessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          tcpSocket:
            port: 7070
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          tcpSocket:
            port: 7070
---
apiVersion: v1
kind: Service
metadata:
  name: cartservice-svc
  namespace: shopping-app
spec:
  selector:
    app: cartservice
  ports:
  - port: 7070
    targetPort: 7070
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rediscart-dp
  namespace: shopping-app
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubernetes.io/change-cause: "Redis version 7.0.15-alpine3.20"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-cart
  template:
    metadata:
      labels:
        app: redis-cart
    spec:
      containers:
      - name: redis
        image: redis:7.0.15-alpine3.20
        ports:
        - containerPort: 6379
        livenessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          tcpSocket:
            port: 6379
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          tcpSocket:
            port: 6379
        volumeMounts:
        - name: redis-data
          mountPath: /data
      volumes:
      - name: redis-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: shopping-app
spec:
  selector:
    app: redis-cart
  ports:
  - port: 6379
    targetPort: 6379
