manifests/checkoutservice.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopping-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice-dp
  namespace: shopping-app
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubernetes.io/change-cause: "Beta version 0.0.2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkoutservice
  template:
    metadata:
      labels:
        app: checkoutservice
    spec:
      containers:
      - name: checkoutservice
        image: longtruong2106/checkoutservice:beta-0.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 5050
        livenessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:5050"]
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:5050"]
---
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice-svc
  namespace: shopping-app
spec:
  selector:
    app: checkoutservice
  ports:
  - port: 5050
    targetPort: 5050
