manifests/emailservice.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopping-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emailservice-dp
  namespace: shopping-app
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubernetes.io/change-cause: "Beta version 0.0.2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emailservice
  template:
    metadata:
      labels:
        app: emailservice
    spec:
      containers:
      - name: emailservice
        image: longtruong2106/emailservice:beta-0.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080"]
---
apiVersion: v1
kind: Service
metadata:
  name: emailservice-svc
  namespace: shopping-app
spec:
  selector:
    app: emailservice
  ports:
  - port: 8080
    targetPort: 8080
