manifests/productcatalog.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopping-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productcatalogservice-dp
  namespace: shopping-app
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubernetes.io/change-cause: "Beta version 0.0.2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productcatalogservice
  template:
    metadata:
      labels:
        app: productcatalogservice
    spec:
      containers:
      - name: productcatalogservice
        image: longtruong2106/productcatalogservice:beta-0.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 3550
        livenessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:3550"]
        readinessProbe:
          initialDelaySeconds: 10
          periodSeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:3550"]
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice-svc
  namespace: shopping-app
spec:
  selector:
    app: productcatalogservice
  ports:
  - port: 3550
    targetPort: 3550
