manifests/frontend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopping-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dp
  namespace: shopping-app
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubernetes.io/change-cause: "Beta version 0.0.2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: longtruong2106/frontend:beta-0.0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 5
          tcpSocket:
            port: 8080
        readinessProbe:
          initialDelaySeconds: 30
          periodSeconds: 5
          tcpSocket:
            port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: shopping-app
spec:
  selector:
    app: frontend
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: frontend-ingress
    namespace: shopping-app
spec:
  tls:
  - hosts:
    - longtruong-lab.online
    secretName: frontend-cert-secret
  ingressClassName: nginx
  rules:
    - host: longtruong-lab.online
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-svc
              port:
                number: 8080
